# 2026-Sequence-Pattern-Discovery-Research

./: .gitignore  README.md  RESEARCH_NOTES.md  cluster_summary.csv  pca_kmeans_silhouette_scores.csv  resistance_motifs.csv
research/ProtienClusterPrediction/protein-transformer-clustering/: README.md  pyproject.toml  requirements.txt
research/ProtienClusterPrediction/protein-transformer-clustering/configs/: default.yaml
research/ProtienClusterPrediction/protein-transformer-clustering/data/: processed
research/ProtienClusterPrediction/protein-transformer-clustering/models/: README.md
research/ProtienClusterPrediction/protein-transformer-clustering/notebooks/: 01-exploration.ipynb  02-training.ipynb
research/ProtienClusterPrediction/protein-transformer-clustering/scripts/: eval_clusters.sh  run_training.sh
research/ProtienClusterPrediction/protein-transformer-clustering/src/: __init__.py  data.py  evaluation.py  model.py  training.py  utils.py
research/ProtienClusterPrediction/protein-transformer-clustering/src/data/: dataset.py  fasta_loader.py  tokenizer.py
research/ProtienClusterPrediction/protein-transformer-clustering/src/evaluation/: cluster_analysis.py  metrics.py
research/ProtienClusterPrediction/protein-transformer-clustering/src/model/: embedding.py  projection.py  transformer.py
research/ProtienClusterPrediction/protein-transformer-clustering/src/training/: dataloader.py  losses.py  scheduler.py  train.py
research/ProtienClusterPrediction/protein-transformer-clustering/tests/: test_all.py  test_model.py  test_tokenizer.py
(+18 files in other folders)
